tests/language_modules/16_control_flow_edges/valid/case_boolean_branches.vf
module Control.BooleanCase

procedure main()
is
    let active: Boolean = true
    case active is
        when true =>
            check active
        when false =>
            check active = false
        default =>
            check true
    end case
end main

end Control.BooleanCase