tests/language_modules/16_control_flow_edges/invalid_syntax/case_without_default.vf
module Control.CaseWithoutDefault

procedure main()
is
    let choice: Integer = 1
    case choice is
        when 1 =>
            check true
    end case
end main

end Control.CaseWithoutDefault